# ADS_LIB

./: ADS_LIB_global.h  CMakeLists.txt  ads_lib.cpp  ads_lib.h
algorithms/: sortings.hpp
data_structures/: binary_tree.hpp  data_structure.h  data_structure.hpp  linked_list.hpp  queue.hpp  stack.hpp
